--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     	<receiver android:name="com.cayden.activity.AlarmReceiver" android:process=":remote" />
-        <activity android:name="com.cayden.activity.Lesson_10"
+        <activity android:name="com.cayden.activity.ShadeActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTask">
             <intent-filter>
