--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,14 @@
 		<service android:name="com.cayden.activity.ActionService"></service>
 		<service android:name="com.cayden.activity.ActionIntentService"></service>
 		<service android:name="com.cayden.activity.NotifyService"></service>
+		
+		<receiver android:name="com.cayden.activity.OutCallReceiver">
+		    <intent-filter android:priority="1">
+		         <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+		    </intent-filter>
+		</receiver>
     </application>
     <uses-sdk android:minSdkVersion="8" />
+    
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
 </manifest> 
