--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     	<receiver android:name="com.cayden.activity.AlarmReceiver" android:process=":remote" />
-        <activity android:name="com.cayden.activity.ShadeActivity"
+        <activity android:name="com.cayden.activity.MainActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTask">
             <intent-filter>
@@ -26,6 +26,7 @@
 		</receiver>
     </application>
     <uses-sdk android:minSdkVersion="8" />
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
+ 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
 </manifest> 
