--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,4 +29,5 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
  	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+    <uses-permission android:name="android.permission.INTERNET"/> 
 </manifest> 
